[metadata]
name = brewm
version = 0.1.0
summary = Beer brewing calculation utilities
description-file =
    README.rst
author = Steve Baker
author-email = steve@stevebaker.org
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    brewm
